RESOLVED FIXED192264
Thick overlines and line-throughs grow in the wrong direction
https://bugs.webkit.org/show_bug.cgi?id=192264
Summary Thick overlines and line-throughs grow in the wrong direction
Myles C. Maxfield
Reported 2018-11-30 16:06:48 PST
Thick overlines and line-throughs grow in the wrong direction
Attachments
Patch (8.47 KB, patch)
2018-11-30 16:08 PST, Myles C. Maxfield
no flags
Patch (8.56 KB, patch)
2018-11-30 16:36 PST, Myles C. Maxfield
dino: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews107 for mac-sierra-wk2 (5.18 MB, application/zip)
2018-11-30 18:02 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews116 for mac-sierra (3.40 MB, application/zip)
2018-11-30 18:50 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews206 for win-future (13.46 MB, application/zip)
2018-11-30 19:22 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews102 for mac-sierra (3.77 MB, application/zip)
2018-11-30 21:27 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (3.67 MB, application/zip)
2018-12-01 00:21 PST, EWS Watchlist
no flags
Patch for committing (8.52 KB, patch)
2018-12-03 16:56 PST, Myles C. Maxfield
no flags
Patch for committing (8.70 KB, patch)
2018-12-04 16:43 PST, Myles C. Maxfield
commit-queue: commit-queue-
Archive of layout-test-results from ews105 for mac-sierra-wk2 (3.05 MB, application/zip)
2018-12-04 18:34 PST, EWS Watchlist
no flags
Myles C. Maxfield
Comment 1 2018-11-30 16:08:09 PST
Myles C. Maxfield
Comment 2 2018-11-30 16:36:16 PST
EWS Watchlist
Comment 3 2018-11-30 18:02:15 PST
Comment on attachment 356261 [details] Patch Attachment 356261 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/10223150 New failing tests: fast/css3-text/css3-text-decoration/text-decoration-line-scaled.html fast/css/first-line-text-decoration-inherited-from-parent.html fast/text/stroking-decorations.html css1/text_properties/text_decoration.html css2.1/20110323/c543-txt-decor-000.html css1/cascade/cascade_order.html
EWS Watchlist
Comment 4 2018-11-30 18:02:17 PST
Created attachment 356276 [details] Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 5 2018-11-30 18:50:23 PST
Comment on attachment 356261 [details] Patch Attachment 356261 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/10223513 New failing tests: fast/css3-text/css3-text-decoration/text-decoration-line-scaled.html fast/css/first-line-text-decoration-inherited-from-parent.html fast/text/stroking-decorations.html css1/text_properties/text_decoration.html css2.1/20110323/c543-txt-decor-000.html css1/cascade/cascade_order.html
EWS Watchlist
Comment 6 2018-11-30 18:50:25 PST
Created attachment 356281 [details] Archive of layout-test-results from ews116 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7 2018-11-30 19:22:22 PST
Comment on attachment 356261 [details] Patch Attachment 356261 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/10224078 New failing tests: css1/text_properties/text_decoration.html fast/css/first-line-text-decoration-inherited-from-parent.html css2.1/20110323/c543-txt-decor-000.html css1/cascade/cascade_order.html
EWS Watchlist
Comment 8 2018-11-30 19:22:34 PST
Created attachment 356283 [details] Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
EWS Watchlist
Comment 9 2018-11-30 21:27:32 PST
Comment on attachment 356261 [details] Patch Attachment 356261 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/10225625 New failing tests: fast/css3-text/css3-text-decoration/text-decoration-line-scaled.html fast/css/first-line-text-decoration-inherited-from-parent.html fast/text/stroking-decorations.html css1/text_properties/text_decoration.html css2.1/20110323/c543-txt-decor-000.html css1/cascade/cascade_order.html
EWS Watchlist
Comment 10 2018-11-30 21:27:34 PST
Created attachment 356292 [details] Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 11 2018-12-01 00:21:45 PST
Comment on attachment 356261 [details] Patch Attachment 356261 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/10226727 New failing tests: fast/css3-text/css3-text-decoration/text-decoration-line-scaled.html fast/css/first-line-text-decoration-inherited-from-parent.html fast/css3-text/css3-text-decoration/text-decoration-thicknes-overline-grow-direction.html css1/text_properties/text_decoration.html css2.1/20110323/c543-txt-decor-000.html css1/cascade/cascade_order.html
EWS Watchlist
Comment 12 2018-12-01 00:21:47 PST
Created attachment 356299 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Myles C. Maxfield
Comment 13 2018-12-03 16:56:15 PST
Created attachment 356437 [details] Patch for committing
Myles C. Maxfield
Comment 14 2018-12-03 19:55:04 PST
Radar WebKit Bug Importer
Comment 15 2018-12-03 19:56:44 PST
Ryan Haddad
Comment 16 2018-12-04 10:01:39 PST
The test added with this change is failing on iOS Simulator, as EWS called out here: https://webkit-queues.webkit.org/results/10256587 Here is a link to an image diff showing that the overline is thicker than expected: https://build.webkit.org/results/Apple%20iOS%2012%20Simulator%20Release%20WK2%20(Tests)/r238851%20(1334)/fast/css3-text/css3-text-decoration/text-decoration-thicknes-overline-grow-direction-diffs.html
Ryan Haddad
Comment 17 2018-12-04 10:51:01 PST
Reverted r238838 for reason: The layout test added with this change is failing on iOS. Committed r238860: <https://trac.webkit.org/changeset/238860>
Myles C. Maxfield
Comment 18 2018-12-04 16:43:33 PST
Created attachment 356553 [details] Patch for committing
EWS Watchlist
Comment 19 2018-12-04 18:34:53 PST
Comment on attachment 356553 [details] Patch for committing Attachment 356553 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/10272079 New failing tests: compositing/fixed-with-main-thread-scrolling.html
EWS Watchlist
Comment 20 2018-12-04 18:34:55 PST
Created attachment 356568 [details] Archive of layout-test-results from ews105 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Myles C. Maxfield
Comment 21 2018-12-05 12:51:39 PST
Test failure is unrelated.
WebKit Commit Bot
Comment 22 2018-12-05 12:53:58 PST
Comment on attachment 356553 [details] Patch for committing Rejecting attachment 356553 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 356553, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: https://webkit-queues.webkit.org/results/10281892
Myles C. Maxfield
Comment 23 2018-12-18 15:39:12 PST
Note You need to log in before you can comment on or make changes to this bug.